name:                rps-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rps-client#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable rps-client
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types
                     , UI
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , wego
                     , stm
                     , rps-core
                     , brick
                     , microlens
                     , microlens-th
                     , vty
                     , mtl
                     , text
                     , vector
                     , lens
                     , stm
